# SWM

swm_gridtools/: CMakeLists.txt  config.hpp  initial_conditions.hpp  swm_gridtools.cpp  swm_gridtools_lr_halo.cpp  verify.hpp
swm_python/: swm_cartesian.py
